update test fix/ optimal gui using Java25